fix overflow issue on layout

--- a/client/assets/styles/scss/components/header.scss
+++ b/client/assets/styles/scss/components/header.scss
@@ -2,7 +2,6 @@
   background: $purple;
   height: 60px;
   padding: 7px 15px 6px; // 7px + 6px = 15px (60px - 45px)
-  width: 100vw;
 
   // logo
   .logo {
