--- a/client/assets/styles/scss/server/server-sidebar.scss
+++ b/client/assets/styles/scss/server/server-sidebar.scss
@@ -1,5 +1,6 @@
 .server-sidebar {
   display: flex;
+  float: left;
   font-size: 13px;
   height: calc(100vh - 132px);
   width: 300px;
